--- a/DemoSession2_SpringData_JPA/src/main/resources/templates/demo/index.html
+++ b/DemoSession2_SpringData_JPA/src/main/resources/templates/demo/index.html
@@ -5,13 +5,15 @@
 </head>
 
 <body>
+	<th:block th:text="${msg}"></th:block>
+
 	<table border="1">
 		<tr>
 			<th>ID</th>
 			<th>NAME</th>
 		</tr>
 		<tr th:each="category : ${categories}">
-			
+
 			<td th:text="${category.id}"></td>
 			<td th:text="${category.name}"></td>
 		<tr>
