java spring tool
14/10/2023

--- a/DemoSession2_SpringData_JPA/src/main/resources/templates/account/login.html
+++ b/DemoSession2_SpringData_JPA/src/main/resources/templates/account/login.html
@@ -1,1 +1,31 @@
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+
+</head>
 <h1>Login</h1>
+<th:block th:text="${msg}"></th:block>
+
+<form method="post" th:action="@{/account/login}">
+	<table>
+		<tr>
+			<th>Username</th>
+			<td>
+				<input type="text" name="username">
+			</td>
+		</tr>
+		<tr>
+			<th>Password</th>
+			<td>
+				<input type="password" name="password">
+			</td>
+		</tr>
+		<tr>
+			<th>&nbsp;</th>
+			<td>
+				<input type="submit" value="LOGIN">
+			</td>
+		</tr>
+	</table>
+	<a th:href="@{/account/register}">Register</a>
+</form>
