--- a/DemoSession2_SpringData_JPA/src/main/resources/templates/account/register.html
+++ b/DemoSession2_SpringData_JPA/src/main/resources/templates/account/register.html
@@ -1,1 +1,59 @@
-<h1>Register</h1>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+	<h3>REGISTER</h3>
+</head>
+<th:block th:text="${msg}"></th:block>
+<body>
+	<form method="post" th:action="@{/account/register}">
+		<table>
+			<tr>
+				<td>Username</td>
+				<td>
+					<input type="text" th:field="${account.username}">
+				</td>
+			</tr>
+			<tr>
+				<td>Password</td>
+				<td>
+					<input type="password" th:field="${account.password}">
+				</td>
+			</tr>
+			<tr>
+				<td>Full Name</td>
+				<td>
+					<input type="text" th:field="${account.fullName}">
+				</td>
+			</tr>
+			<tr>
+				<td>Email</td>
+				<td>
+					<input type="text" th:field="${account.email}">
+				</td>
+			</tr>
+			<tr>
+				<td>Status</td>
+				<td>
+					<input type="checkbox" th:field="${account.status}">
+				</td>
+			</tr>
+			<tr>
+				<td>Role</td>
+				<td>
+					<th:block th:each="role : ${roles}">
+						<input type="checkbox" th:value="${role.id}" th:field="${account.roles}" >
+						<th:block th:text="${role.name}"></th:block>
+						<br>
+					</th:block>
+				</td>
+			</tr>
+				<tr>
+				<td>&nbsp;</td>
+				<td>
+					<input type="submit" value="REGISTER">
+				</td>
+			</tr>
+		</table>
+	</form>
+	<a th:href="@{/account/login}">LOGIN</a>
+</body>
