--- a/DemoSession2_SpringData_JPA/src/main/resources/templates/account/login.html
+++ b/DemoSession2_SpringData_JPA/src/main/resources/templates/account/login.html
@@ -27,5 +27,6 @@
 			</td>
 		</tr>
 	</table>
-	<a th:href="@{/account/register}">Register</a>
 </form>
+<a th:href="@{/account/register}">Register</a> |
+<a th:href="@{/account/forgetPassword}">Forget Password</a>
