Java Spring Tool
Security

--- a/DemoSpringMVC_Session1/src/main/resources/templates/home/index.html
+++ b/DemoSpringMVC_Session1/src/main/resources/templates/home/index.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout/user :: mainContent('Home Page', ~{this :: h3 })">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/user :: mainContent('Home Page', ~{this :: h3 })}">
 
 <head>
 	<title></title>
