--- a/SpringMVCSecurity/src/main/resources/templates/account/profile.html
+++ b/SpringMVCSecurity/src/main/resources/templates/account/profile.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  th:replace="~{layout/user :: content('Home Page', ~{this :: #profile })}">
 
 <head>
 	<h3>Profile</h3>
@@ -6,7 +6,8 @@
 <th:block th:text="${msg}"></th:block>
 
 <body>
-	<form method="post" th:action="@{/account/profile}">
+	<div id="profile">
+		<form method="post" th:action="@{/account/profile}">
 		<table>
 			<tr>
 				<td>Username</td>
@@ -58,4 +59,5 @@
 		</table>
 	</form>
 	<a th:href="@{/account/success}">Back</a>
+	</div>
 </body>
