--- a/SpringMVCSecurity/src/main/resources/templates/account/success.html
+++ b/SpringMVCSecurity/src/main/resources/templates/account/success.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" th:replace="~{layout/user :: content('success', ~{this :: h1 })}">
 
 <head>
 	success
@@ -6,9 +6,8 @@
 
 <body>
 	<th:block th:text="${msg}"></th:block>
-	<h1>Hello</th:block>
-	</h1>
+	<h1>Hello <th:block sec:authentication="name"></th:block></h1>
 	<a th:href="@{/account/profile}">Profile</a>
 	<br>
-	<a th:href="@{/account/login}">LOG OUT</a>
+	<a th:href="@{/account/logout}">LOG OUT</a>
 </body>
