--- a/SpringMVCSecurity/src/main/resources/templates/admin/category/index.html
+++ b/SpringMVCSecurity/src/main/resources/templates/admin/category/index.html
@@ -1,8 +1,9 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/user :: content('Category - Admin', ~{this :: h3 })}">
 	<head>
 		
 	</head>
 	<body>
-		<h1>Category - Admin</h1>
+		<h3>Category - Admin</h3>
+		<a th:href="@{/account/logout}">LOG OUT</a>
 	</body>
 </html>
