--- a/SpringMVCSecurity/src/main/resources/templates/employee/product/index.html
+++ b/SpringMVCSecurity/src/main/resources/templates/employee/product/index.html
@@ -1,8 +1,8 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/user :: content('Product - Employee', ~{this :: h3 })}">
 	<head>
 		
 	</head>
 	<body>
-		<h1>Product - Employee</h1>
+		<h3>Product - Employee</hh3>
 	</body>
 </html>
